--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
+        compose true
+        viewBinding true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.5.1'
@@ -46,7 +48,13 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.core:core-ktx:1.13.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
     implementation 'androidx.activity:activity-compose:1.9.0'
+    implementation 'androidx.compose.ui:ui:1.6.6'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.6.6'
+    implementation 'androidx.compose.material:material:1.6.6'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.2.0'
 
     // MVI
     def orbitVerion = '4.5.0'
